[gd_scene load_steps=10 format=3 uid="uid://bqrwlhh53caev"]

[ext_resource type="Script" uid="uid://35si2vhdcx33" path="res://Scripts/dashboard.gd" id="1_pyu07"]
[ext_resource type="Texture2D" uid="uid://cxge6pknpl6gx" path="res://Sprite/GUI/dog.png" id="1_w53iw"]
[ext_resource type="Texture2D" uid="uid://c3nm0o1gl8uh0" path="res://Sprite/GUI/settings-svgrepo-com.svg" id="3_vkjem"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wytj6"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyu07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkjem"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.801559, 0.526758, 0.230713, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_235xf"]
bg_color = Color(0.917148, 0.532236, 0.284096, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.65302, 0.376976, 0.234217, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_42qyo"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.801559, 0.526758, 0.230713, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_235xf"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pyu07")

[node name="Panel" type="Panel" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wytj6")

[node name="Sprite2D" type="Sprite2D" parent="Panel"]
modulate = Color(1, 0.694118, 0.647059, 0.0470588)
self_modulate = Color(1, 0.813727, 0.780998, 0.411765)
position = Vector2(210, 631)
texture = ExtResource("1_w53iw")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -163.0
offset_right = 142.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Zenpet_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 5.06
theme_override_colors/font_outline_color = Color(0.8, 0.52549, 0.231373, 1)
theme_override_colors/font_color = Color(1, 0.717647, 0.580392, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_pyu07")
theme_override_styles/hover = SubResource("StyleBoxFlat_vkjem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_235xf")
theme_override_styles/normal = SubResource("StyleBoxFlat_42qyo")
text = "ZenPet"

[node name="Zenbody_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 5.06
theme_override_colors/font_outline_color = Color(0.8, 0.52549, 0.231373, 1)
theme_override_colors/font_color = Color(1, 0.717647, 0.580392, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_pyu07")
theme_override_styles/hover = SubResource("StyleBoxFlat_vkjem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_235xf")
theme_override_styles/normal = SubResource("StyleBoxFlat_42qyo")
text = "ZenBody"

[node name="Zendiary_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 5.06
theme_override_colors/font_outline_color = Color(0.8, 0.52549, 0.231373, 1)
theme_override_colors/font_color = Color(1, 0.717647, 0.580392, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_pyu07")
theme_override_styles/hover = SubResource("StyleBoxFlat_vkjem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_235xf")
theme_override_styles/normal = SubResource("StyleBoxFlat_42qyo")
text = "ZenDiary"

[node name="Zenai_btn" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 5.06
theme_override_colors/font_outline_color = Color(0.8, 0.52549, 0.231373, 1)
theme_override_colors/font_color = Color(1, 0.717647, 0.580392, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 41
theme_override_styles/focus = SubResource("StyleBoxEmpty_pyu07")
theme_override_styles/hover = SubResource("StyleBoxFlat_vkjem")
theme_override_styles/pressed = SubResource("StyleBoxFlat_235xf")
theme_override_styles/normal = SubResource("StyleBoxFlat_42qyo")
text = "ZenAi"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -78.0
offset_top = 19.0
offset_right = -21.0
offset_bottom = 77.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 36
theme_override_styles/focus = SubResource("StyleBoxEmpty_235xf")
icon = ExtResource("3_vkjem")
flat = true
